# STM32_LoRa

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32F103C8TX_FLASH.ld  STM_LoRa Debug (2).launch  STM_LoRa.ioc
Core/Inc/: main.h
Core/Src/: cmox_low_level.c  gpio.c  main.c  spi.c
Debug/: STM_LoRa.elf  STM_LoRa.list  STM_LoRa.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  subdir.mk
Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
Debug/LoRa/: LoRa.cyclo  LoRa.d  LoRa.su  subdir.mk
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_rcc.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_gpio.c
LoRa/: LoRa.c  LoRa.h
cmake/: gcc-arm-none-eabi.cmake  print_fof_sections.cmake
cmake/stm32cubemx/: CMakeLists.txt
